started importing first blog post

--- a/_config.yml
+++ b/_config.yml
@@ -19,24 +19,24 @@ show_post_footers:  false
 disqus_shortname:
 
 # Social icons
-show_social_icons: false
-github_username:
+show_social_icons: true
+github_username: jayshahtx
 stackoverflow_id:
-twitter_username:
+twitter_username: jayshahtx
 google_plus_id:
-linkedin_username:
+linkedin_username: jayshahtx
 bitcoin_url:
 paypal_url:
 flattr_button:
 
 # Post sharing icons
 show_sharing_icons: false
-share_text: 'Share this post!'
+share_text: 'Click to share this post'
 # Change to 'true' to enable individual icons
-share_facebook: false
-share_twitter: false
+share_facebook: true
+share_twitter: true
 share_googleplus: false
-share_linkedin: false
+share_linkedin: true
 share_digg: false
 share_tumblr: false
 share_reddit: false
