--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ email:       jayshahtx@gmail.com
 author:      Jay Shah
 description: "Personal blog and projects"
 baseurl:     ""
-url:         "http://jayshahtx.github.io"
+url:         "jayshah.me"
 
 # Google analytics
-google_analytics:
+google_analytics: UA-63732665-1
 
 # Optional features
 animated:           true
