--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ description: "Personal blog and projects"
 baseurl:     ""
 url:         "http://jayshah.me"
 
+# gems
+gems: [jekyll-paginate]
+
 # Google analytics
 google_analytics: UA-63732665-1
 
